Add dimensiondata module utility package
This package contains methods that are shared between dimensiondata
Ansible modules that are found in the ansible-core-modules repo. It
has dependencies on libcloud.

--- a/.travis.yml
+++ b/.travis.yml
@@ -28,6 +28,7 @@ addons:
       - python2.4
 install:
   - pip install tox
+  - pip install apache-libcloud
 script:
   - ./test/utils/run_tests.sh
 notifications:
